src/main/resources/hello-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-dep
  template:
    metadata:
      labels:
        app: hello-dep
    spec:
      containers:
        - image: gcr.io/google-samples/hello-app:1.0
          imagePullPolicy: Always
          name: hello-dep
          ports:
            - containerPort: 8080
