src/main/resources/postgres-deployment.yml
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  annotations: {}
  finalizers: []
  labels: {}
  name: "deployment2"
  ownerReferences: []
spec:
  replicas: 2
  template:
    metadata:
      annotations: {}
      finalizers: []
      labels:
        app: "database"
        dbtype: "postgres"
      ownerReferences: []
    spec:
      containers:
      - args: []
        command: []
        envFrom: []
        image: "centos/postgresql-96-centos7"
        name: "postgres"
        ports:
        - containerPort: 5432
        volumeMounts: []
      hostAliases: []
      imagePullSecrets: []
      initContainers: []
      nodeSelector: {}
      tolerations: []
      volumes: []
