src/main/resources/test-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: example-pod
  labels:
    app: example-app
    version: v1
    role: backend
spec:
  containers:
    - name: nginx
      image: nginx:1.7.9
      ports:
        - containerPort: 80
