src/main/resources/httpbinservice.yml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  labels:
    app: httpbin
spec:
  ports:
  - name: http
    port: 5511
    targetPort: 8080
  selector:
    deploymentconfig: httpbin
