src/main/resources/multiple-routes.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: host-route
spec:
  host: www.example.com  
  to:
    kind: Service
    name: service-name
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-unsecured
spec:
  host: www.example.com
  path: "/test"   
  to:
    kind: Service
    name: service-name
